After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698530 - adding contact to group does not cause them to leave Ungrouped until Empathy restart
adding contact to group does not cause them to leave Ungrouped until Empathy ...
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Contact List
3.6.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2013-04-21 23:48 UTC by Danielle Madeley
Modified: 2013-08-13 15:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Contact should leave 'Ungrouped' group immediately upon first joining a group (1.30 KB, patch)
2013-07-12 15:18 UTC, Chandni Verma
reviewed Details | Review
Contact should leave 'Ungrouped' group immediately upon first joining a group (1.33 KB, patch)
2013-07-20 20:42 UTC, Chandni Verma
accepted-commit_now Details | Review

Description Danielle Madeley 2013-04-21 23:48:22 UTC
Adding a contact to a group does not cause them to disappear from Ungrouped until you kill and restart Empathy (not Telepathy).
Comment 1 Chandni Verma 2013-07-12 15:18:31 UTC
Created attachment 249020 [details] [review]
Contact should leave 'Ungrouped' group immediately upon first joining a group
Comment 2 Guillaume Desmottes 2013-07-19 09:21:41 UTC
Review of attachment 249020 [details] [review]:

::: libempathy-gtk/empathy-roster-view.c
@@ +356,3 @@
+  if (tp_strdiff (group, NO_GROUP) &&
+      tp_strdiff (group, EMPATHY_ROSTER_MODEL_GROUP_UNGROUPED) &&
+      g_hash_table_size (contacts) == 2)

This last check isn't very clear. Can't we remove it and rely on remove_from_group being noop if the contact is not in the "no group" group?
Comment 3 Chandni Verma 2013-07-20 20:38:33 UTC
The first group here is the "Ungrouped" group from which we have to remove this individual. The second group is the first group we have just added this individual to.
I have inlined a comment.
Comment 4 Chandni Verma 2013-07-20 20:42:11 UTC
Created attachment 249707 [details] [review]
Contact should leave 'Ungrouped' group immediately upon first joining a group
Comment 5 Guillaume Desmottes 2013-08-13 14:49:45 UTC
Review of attachment 249707 [details] [review]:

++
Comment 6 Guillaume Desmottes 2013-08-13 14:49:46 UTC
Review of attachment 249707 [details] [review]:

++
Comment 7 Chandni Verma 2013-08-13 15:37:30 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.