Contact should leave 'Ungrouped' group immediately upon first joining a group

https://bugzilla.gnome.org/show_bug.cgi?id=698530